# thesniper

./: INSTRUCTIONS.md  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  backtester.py  betpawa_client.py  data_loader.py  odds_predictor.py  predictor.py  smart_predictor.py
data/: __init__.py  mock_data.py
